# qwen-chat

./: .env.example  LICENSE  README.md  pyproject.toml  test_qwen_chat.py  test_qwen_image.py
qwen_chat/: __init__.py  client.py  llamaindex.py  logger.py
qwen_chat/core/: auth_manager.py
qwen_chat/core/types/: chat.py  endpoint_api.py  schema.py
qwen_chat/resources/: completions.py
