[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-chat"
version = "1.0.0"
authors = [
  { name="Shahadat Hassan", email="shahadathassan29@gmail.com" },
]
description = "Unofficial Qwen API Client & Chat Wrapper"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["qwen", "ai", "llm", "qwen-chat", "chatbot"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "sseclient-py>=1.8.0",
    "pydantic>=2.11.4",
    "aiohttp>=3.11.18",
    "colorama>=0.4.6",
    "oss2>=2.19.1,<3.0.0",
    "filetype>=1.2.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/PikachuFromBd/qwen-chat"
Documentation = "https://github.com/PikachuFromBd/qwen-chat"
Repository = "https://github.com/PikachuFromBd/qwen-chat"
Issues = "https://github.com/PikachuFromBd/qwen-chat/issues"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
